# csv_editor

./: .gitignore  README.md  pyproject.toml  test_csv.csv
src/csv-ve/: __init__.py  csve_ve.tcss  data_model.py
src/csv_editor/: csveditorapp.tcss  data_model.py  helpers.py  ui.py
src/csv_editor/screens/: screen.py  screen.tcss
src/csv_ve/: __main__.py  cli.py  ui.py
